[gd_scene load_steps=14 format=3 uid="uid://cyjnm8s5v5sc4"]

[ext_resource type="Script" uid="uid://ctgoave6nukhq" path="res://scripts/test/test_input/test_input_container.gd" id="1_fy3hk"]
[ext_resource type="Texture2D" uid="uid://eh22112651it" path="res://art/icon.svg" id="1_fytjl"]
[ext_resource type="Script" uid="uid://cjnbj4pqy5nhj" path="res://scripts/test/test_input/test_input_entry.gd" id="1_ikusu"]
[ext_resource type="Script" uid="uid://c3c3hag86c7bu" path="res://scripts/test/test_input/test_input.gd" id="1_n0bgd"]
[ext_resource type="Script" uid="uid://cr73k2kd07cm" path="res://scripts/core/input/input_control.gd" id="2_e26lr"]
[ext_resource type="Script" uid="uid://dyg7m6mcjhcto" path="res://scripts/core/input/input_handlers/pick.gd" id="3_ch1ta"]
[ext_resource type="Script" uid="uid://jqucflsydlnw" path="res://scripts/core/input/input_handlers/drag.gd" id="4_ikusu"]
[ext_resource type="Script" uid="uid://djra4hxrlmxov" path="res://scripts/core/input/input_handlers/drop.gd" id="5_fy3hk"]
[ext_resource type="Script" uid="uid://coxwyb7vc8lxl" path="res://scripts/core/input/input_handlers/hover.gd" id="6_48rp3"]
[ext_resource type="Script" uid="uid://b0u5rrfnle1v" path="res://scripts/core/input/mouse/mouse_input.gd" id="9_48rp3"]
[ext_resource type="Script" uid="uid://qvh4bw7i3w78" path="res://scripts/core/2dmove/transform_control.gd" id="11_36epx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6kap"]
size = Vector2(80, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48rp3"]
size = Vector2(64, 64)

[node name="TestInput" type="Node2D" node_paths=PackedStringArray("input_control_entry_1", "input_control_entry_2", "input_control_container_1", "input_control_3", "input_control_4", "input_control_container_2")]
script = ExtResource("1_n0bgd")
input_control_entry_1 = NodePath("Container1/Entry1/InputControl")
input_control_entry_2 = NodePath("Container1/Entry2/InputControl")
input_control_container_1 = NodePath("Container1/InputControl")
input_control_3 = NodePath("Container2/Entry1/InputControl")
input_control_4 = NodePath("Container2/Entry2/InputControl")
input_control_container_2 = NodePath("Container2/InputControl")

[node name="Container1" type="Node2D" parent="." node_paths=PackedStringArray("input_control")]
position = Vector2(261, 322)
script = ExtResource("1_fy3hk")
input_control = NodePath("InputControl")

[node name="Area2D" type="Area2D" parent="Container1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container1/Area2D"]
shape = SubResource("RectangleShape2D_v6kap")

[node name="InputControl" type="Node2D" parent="Container1" node_paths=PackedStringArray("mouse_input", "drop")]
script = ExtResource("2_e26lr")
mouse_input = NodePath("MouseInput")
drop = NodePath("Drop")
metadata/_custom_type_script = "uid://cr73k2kd07cm"

[node name="Drop" type="Node2D" parent="Container1/InputControl"]
script = ExtResource("5_fy3hk")
metadata/_custom_type_script = "uid://djra4hxrlmxov"

[node name="MouseInput" type="Node2D" parent="Container1/InputControl" node_paths=PackedStringArray("area", "collision_shape")]
script = ExtResource("9_48rp3")
area = NodePath("../../Area2D")
collision_shape = NodePath("../../Area2D/CollisionShape2D")
metadata/_custom_type_script = "uid://b0u5rrfnle1v"

[node name="Entry1" type="Node2D" parent="Container1" node_paths=PackedStringArray("input_control")]
z_index = 1
position = Vector2(0, -32)
script = ExtResource("1_ikusu")
input_control = NodePath("InputControl")

[node name="Sprite2D" type="Sprite2D" parent="Container1/Entry1"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_fytjl")

[node name="InputControl" type="Node2D" parent="Container1/Entry1" node_paths=PackedStringArray("mouse_input", "pick", "drag", "hover")]
script = ExtResource("2_e26lr")
mouse_input = NodePath("MouseInput")
pick = NodePath("Pick")
drag = NodePath("Drag")
hover = NodePath("Hover")

[node name="Pick" type="Node2D" parent="Container1/Entry1/InputControl"]
script = ExtResource("3_ch1ta")
pick_group_names = Array[String](["group1"])
metadata/_custom_type_script = "uid://dyg7m6mcjhcto"

[node name="Drag" type="Node2D" parent="Container1/Entry1/InputControl"]
script = ExtResource("4_ikusu")
metadata/_custom_type_script = "uid://jqucflsydlnw"

[node name="Hover" type="Node2D" parent="Container1/Entry1/InputControl"]
script = ExtResource("6_48rp3")
enabled = true
metadata/_custom_type_script = "uid://coxwyb7vc8lxl"

[node name="MouseInput" type="Node2D" parent="Container1/Entry1/InputControl" node_paths=PackedStringArray("area", "collision_shape")]
script = ExtResource("9_48rp3")
area = NodePath("../../Area2D")
collision_shape = NodePath("../../Area2D/CollisionShape2D")
metadata/_custom_type_script = "uid://b0u5rrfnle1v"

[node name="Area2D" type="Area2D" parent="Container1/Entry1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container1/Entry1/Area2D"]
shape = SubResource("RectangleShape2D_48rp3")

[node name="TransformControl" type="Node2D" parent="Container1/Entry1" node_paths=PackedStringArray("node")]
script = ExtResource("11_36epx")
node = NodePath("..")
rotate_on_move = true
metadata/_custom_type_script = "uid://qvh4bw7i3w78"

[node name="Entry2" type="Node2D" parent="Container1" node_paths=PackedStringArray("input_control")]
z_index = 2
position = Vector2(0, 32)
script = ExtResource("1_ikusu")
input_control = NodePath("InputControl")

[node name="Sprite2D" type="Sprite2D" parent="Container1/Entry2"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_fytjl")

[node name="InputControl" type="Node2D" parent="Container1/Entry2" node_paths=PackedStringArray("mouse_input", "pick", "drag", "hover")]
script = ExtResource("2_e26lr")
mouse_input = NodePath("MouseInput")
pick = NodePath("Pick")
drag = NodePath("Drag")
hover = NodePath("Hover")

[node name="Pick" type="Node2D" parent="Container1/Entry2/InputControl"]
script = ExtResource("3_ch1ta")
pick_group_names = Array[String](["group1"])
metadata/_custom_type_script = "uid://dyg7m6mcjhcto"

[node name="Drag" type="Node2D" parent="Container1/Entry2/InputControl"]
script = ExtResource("4_ikusu")
metadata/_custom_type_script = "uid://jqucflsydlnw"

[node name="Hover" type="Node2D" parent="Container1/Entry2/InputControl"]
script = ExtResource("6_48rp3")
enabled = true
metadata/_custom_type_script = "uid://coxwyb7vc8lxl"

[node name="MouseInput" type="Node2D" parent="Container1/Entry2/InputControl" node_paths=PackedStringArray("area", "collision_shape")]
script = ExtResource("9_48rp3")
area = NodePath("../../Area2D")
collision_shape = NodePath("../../Area2D/CollisionShape2D")
metadata/_custom_type_script = "uid://b0u5rrfnle1v"

[node name="Area2D" type="Area2D" parent="Container1/Entry2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container1/Entry2/Area2D"]
shape = SubResource("RectangleShape2D_48rp3")

[node name="TransformControl" type="Node2D" parent="Container1/Entry2" node_paths=PackedStringArray("node")]
script = ExtResource("11_36epx")
node = NodePath("..")
rotate_on_move = true
metadata/_custom_type_script = "uid://qvh4bw7i3w78"

[node name="Label" type="Label" parent="."]
offset_left = 555.0
offset_top = 51.0
offset_right = 595.0
offset_bottom = 74.0

[node name="Container2" type="Node2D" parent="." node_paths=PackedStringArray("input_control")]
position = Vector2(881, 318)
script = ExtResource("1_fy3hk")
input_control = NodePath("InputControl")

[node name="Area2D" type="Area2D" parent="Container2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container2/Area2D"]
shape = SubResource("RectangleShape2D_v6kap")

[node name="InputControl" type="Node2D" parent="Container2" node_paths=PackedStringArray("mouse_input", "drop")]
script = ExtResource("2_e26lr")
mouse_input = NodePath("MouseInput")
drop = NodePath("Drop")
metadata/_custom_type_script = "uid://cr73k2kd07cm"

[node name="Drop" type="Node2D" parent="Container2/InputControl"]
script = ExtResource("5_fy3hk")
metadata/_custom_type_script = "uid://djra4hxrlmxov"

[node name="MouseInput" type="Node2D" parent="Container2/InputControl" node_paths=PackedStringArray("area", "collision_shape")]
script = ExtResource("9_48rp3")
area = NodePath("../../Area2D")
collision_shape = NodePath("../../Area2D/CollisionShape2D")
metadata/_custom_type_script = "uid://b0u5rrfnle1v"

[node name="Entry1" type="Node2D" parent="Container2" node_paths=PackedStringArray("input_control")]
z_index = 1
position = Vector2(0, -32)
script = ExtResource("1_ikusu")
input_control = NodePath("InputControl")

[node name="Sprite2D" type="Sprite2D" parent="Container2/Entry1"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_fytjl")

[node name="InputControl" type="Node2D" parent="Container2/Entry1" node_paths=PackedStringArray("mouse_input", "pick", "drag", "hover")]
script = ExtResource("2_e26lr")
mouse_input = NodePath("MouseInput")
pick = NodePath("Pick")
drag = NodePath("Drag")
hover = NodePath("Hover")

[node name="Pick" type="Node2D" parent="Container2/Entry1/InputControl"]
script = ExtResource("3_ch1ta")
pick_group_names = Array[String](["group2"])
metadata/_custom_type_script = "uid://dyg7m6mcjhcto"

[node name="Drag" type="Node2D" parent="Container2/Entry1/InputControl"]
script = ExtResource("4_ikusu")
metadata/_custom_type_script = "uid://jqucflsydlnw"

[node name="Hover" type="Node2D" parent="Container2/Entry1/InputControl"]
script = ExtResource("6_48rp3")
enabled = true
metadata/_custom_type_script = "uid://coxwyb7vc8lxl"

[node name="MouseInput" type="Node2D" parent="Container2/Entry1/InputControl" node_paths=PackedStringArray("area", "collision_shape")]
script = ExtResource("9_48rp3")
area = NodePath("../../Area2D")
collision_shape = NodePath("../../Area2D/CollisionShape2D")
metadata/_custom_type_script = "uid://b0u5rrfnle1v"

[node name="Area2D" type="Area2D" parent="Container2/Entry1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container2/Entry1/Area2D"]
shape = SubResource("RectangleShape2D_48rp3")

[node name="TransformControl" type="Node2D" parent="Container2/Entry1" node_paths=PackedStringArray("node")]
script = ExtResource("11_36epx")
node = NodePath("..")
rotate_on_move = true
metadata/_custom_type_script = "uid://qvh4bw7i3w78"

[node name="Entry2" type="Node2D" parent="Container2" node_paths=PackedStringArray("input_control")]
z_index = 2
position = Vector2(0, 32)
script = ExtResource("1_ikusu")
input_control = NodePath("InputControl")

[node name="Sprite2D" type="Sprite2D" parent="Container2/Entry2"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_fytjl")

[node name="InputControl" type="Node2D" parent="Container2/Entry2" node_paths=PackedStringArray("mouse_input", "pick", "drag", "hover")]
script = ExtResource("2_e26lr")
mouse_input = NodePath("MouseInput")
pick = NodePath("Pick")
drag = NodePath("Drag")
hover = NodePath("Hover")

[node name="Pick" type="Node2D" parent="Container2/Entry2/InputControl"]
script = ExtResource("3_ch1ta")
pick_group_names = Array[String](["group2"])
metadata/_custom_type_script = "uid://dyg7m6mcjhcto"

[node name="Drag" type="Node2D" parent="Container2/Entry2/InputControl"]
script = ExtResource("4_ikusu")
metadata/_custom_type_script = "uid://jqucflsydlnw"

[node name="Hover" type="Node2D" parent="Container2/Entry2/InputControl"]
script = ExtResource("6_48rp3")
enabled = true
metadata/_custom_type_script = "uid://coxwyb7vc8lxl"

[node name="MouseInput" type="Node2D" parent="Container2/Entry2/InputControl" node_paths=PackedStringArray("area", "collision_shape")]
script = ExtResource("9_48rp3")
area = NodePath("../../Area2D")
collision_shape = NodePath("../../Area2D/CollisionShape2D")
metadata/_custom_type_script = "uid://b0u5rrfnle1v"

[node name="Area2D" type="Area2D" parent="Container2/Entry2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container2/Entry2/Area2D"]
shape = SubResource("RectangleShape2D_48rp3")

[node name="TransformControl" type="Node2D" parent="Container2/Entry2" node_paths=PackedStringArray("node")]
script = ExtResource("11_36epx")
node = NodePath("..")
rotate_on_move = true
metadata/_custom_type_script = "uid://qvh4bw7i3w78"
